--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
       <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+      <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
       <source.version>11</source.version>
       <target.version>11</target.version>
       <mockito.version>2.23.4</mockito.version>
@@ -56,6 +57,10 @@
                     <source>${source.version}</source>
                     <target>${source.version}</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
             </plugin>
         </plugins>
     </build>
